<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">发送通知</string>
    <string name="shorttitle">概要</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="button">发送</string>
     <string name="phonecalling">来电了</string>
     <string name="phonecontent">请速回</string>
     <string name="phonetitle">小王来电了</string>
    
</resources>
