<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/shorttitle"
    />
    
    <EditText
     android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/shorttitle"
    android:text="@string/phonecalling"
    />
    
  <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/title"
    />
    
    <EditText
     android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/title"
    android:text="@string/phonetitle"
    />
    
   <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/content"
    
    />
    
    <EditText
     android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/content"
     android:text="@string/phonecontent"
    />
    
    <Button
     android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/button"
    android:onClick="send"
    />
</LinearLayout>
